# fluid_simulation

./: .gitignore  CMakeLists.txt  README.md  fluid_simulation.cbp
dpcxx_dll/: build.bat
include/: calculate_feq.cpp  collision_step.hpp  collision_step_dpcpp.hpp  collision_step_serial.hpp  collision_step_tbb_thread_pool.hpp  colors.hpp  compute_mass.hpp  compute_momentum.hpp  fs.hpp  gl.hpp  global_aliases.hpp  grid.hpp  grid_renderer.hpp  gui.hpp  handle_boundaries.hpp  initialize_grid.hpp  lbm.hpp  lbm_global_data.hpp  lga.hpp  pair_hash.hpp  propagate.hpp  random_seed.hpp  rendering.hpp  set_inlet.hpp  settings.hpp  shader.hpp  streaming_step.hpp  velocity.hpp
inline/: grid_renderer.inl
main/: build.bat  comp.bat  cpu_gpu_performance_comp.cpp  gl.cpp  imgui.ini  main.cpp  main_double_buffered.cpp  main_parallel.cpp  profile_main.py  set_up.ps1  set_up.sh  setup_googletest.sh  temp_script.py
performance_profiling/: profile_collision_step.cpp
shaders/: grid_fragment.glsl  grid_vertex.glsl  point_fragment.glsl  point_vertex.glsl  test_vertex.glsl  text_fragment.glsl  text_vertex.glsl  triangle_fragment.glsl  triangle_vertex.glsl
src/: collision_step_dpcpp_instantiation.cpp  fs.cpp  glad.c  global_aliases.cpp  grid_renderer.cpp  gui.cpp  lbm.cpp  lbm_global_data.cpp  lga.cpp  main.cpp  propagate.cpp  shader.cpp
tests/: test_LU_decomposition.cpp  test_M_inverse.cpp  test_collide_and_stream_equivalence.cpp  test_collide_and_stream_state.cpp  test_conservation_of_mass.cpp  test_conservation_of_mass_and_momentum.cpp  test_conservation_of_momentum.cpp  (+14 more)
(+112 files in other folders)
